--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -15,8 +15,10 @@ prism: true
                 </time>
             </p>
     
+            
         </div>
         <article class="prose lg:prose-xl my-4 mx-auto">
+          <img src="{{ post.data.image }}" alt="{{ post.image.imageAlt}}">
             {{ content | safe }}</article>
     
     </div>
