--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -8,7 +8,23 @@
       {{title}}
     </title>
     {% if description %}
-      <meta name="description" content="{{description}}"/>
+    <meta name="title" content="{{title}}">
+    <meta name="description" content="{{description}}"/>
+
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mrpcode.netlify.app/">
+    <meta property="og:title" content="{{title}}">
+    <meta property="og:description" content="{{description}}">
+    <meta property="og:image" content="{{image}}">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://mrpcode.netlify.app/">
+    <meta property="twitter:title" content="{{title}}">
+    <meta property="twitter:description" content="{{title}}">
+    <meta property="twitter:image" content="{{image}}">
     {% endif %}
     {% block head %}{% endblock %}
     <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
